# jobs-parser

./: README.md  pyproject.toml
src/: jobs.py  saver.py  utils.py  vacancy.py
