[tool.poetry]
name = "jobs-parser"
version = "0.1.0"
description = ""
authors = ["selim <selimseidov@gmail.com>"]
readme = "README.md"
packages = [{include = "jobs_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
